--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     volumes:
       # Update this to wherever you want VS Code to mount the folder of your project
       - .:/home/node/app:cached
+    environment:
+      - SHELL=/bin/zsh
 
     # Uncomment the next four lines if you will use a ptrace-based debugger like C++, Go, and Rust.
     # cap_add:
